[gd_scene load_steps=8 format=2]

[ext_resource path="res://Global/Menus/MainMenuScript.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/flipside.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.588235, 0.647059, 0.670588, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.164706, 0.215686, 0.278431, 1 )

[sub_resource type="DynamicFont" id=8]
size = 46
font_data = ExtResource( 2 )

[node name="ColorRect" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.0980392, 0.105882, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 500
custom_constants/margin_top = 200
custom_constants/margin_left = 500
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 500.0
margin_top = 200.0
margin_right = 1420.0
margin_bottom = 1080.0
custom_constants/separation = 160

[node name="GameName" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 920.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.945098, 0.941176, 0.933333, 1 )
text = "Confuture"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 920.0
margin_bottom = 536.0
custom_constants/margin_right = 200
custom_constants/margin_left = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 200.0
margin_right = 720.0
margin_bottom = 276.0
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 520.0
margin_bottom = 52.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.945098, 0.941176, 0.933333, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 520.0
margin_bottom = 164.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.945098, 0.941176, 0.933333, 1 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 520.0
margin_bottom = 276.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.945098, 0.941176, 0.933333, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
